modules/terraform-aws-apps/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
        - name: flask
          image: 012889719104.dkr.ecr.ap-south-1.amazonaws.com/api-flask-repo:latest    
          ports:
            - containerPort: 5000



# apiVersion: v1
# kind: Service
# metadata:
#   name: my-app-service
# spec:
#   type: NodePort
#   selector:
#     app: my-app
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 5000
